--- a/qanda/qanda_app/locale/tr/LC_MESSAGES/django.po
+++ b/qanda/qanda_app/locale/tr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-04-23 20:38+0300\n"
+"POT-Creation-Date: 2013-04-23 23:32+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -261,8 +261,8 @@ msgstr "Bu Soru Kapatılmıştır!"
 #: templates/qanda/overlay.html:14
 msgid "Click Anywhere to Continue (editors can continue to the question page)"
 msgstr ""
-"Devam etmek için herhangi bir yere tıklayın (editörler soru sayfasında "
-"kalacaktır)"
+"Devam etmek için herhangi bir yere tıklayın (editörler soru sayfasına "
+"devam edebilir)"
 
 #: templates/qanda/overlay.html:16
 msgid "Click Anywhere to Continue"
