--- a/qanda/qanda_app/locale/tr/LC_MESSAGES/django.po
+++ b/qanda/qanda_app/locale/tr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-05-02 00:32+0300\n"
+"POT-Creation-Date: 2013-05-02 02:42+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -103,6 +103,14 @@ msgstr "Cevap Takibi"
 #: models.py:556
 msgid "Answer Subscriptions"
 msgstr "Cevap Takipleri"
+
+#: models.py:567
+msgid "New answer to "
+msgstr "Yeni cevap: "
+
+#: models.py:584
+msgid "New reply to your answer in "
+msgstr "Yeni yorum: "
 
 #: templates/qanda/add_category_popup.html:15
 msgid "Category Name"
